--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -362,6 +362,7 @@ p {
   overflow: hidden;
   color: #67788A;
   font-size: 14px;
+  border: 1px solid #d9d9d9;
 }
 
 .resource-item--image-container {
@@ -472,7 +473,7 @@ p {
   .projekt-phase-link {
     text-decoration: underline;
     display: block;
-    color: #67788A;
+    color: inherit;
   }
   i {
     margin-right: 5px;
@@ -508,7 +509,19 @@ p {
 
     .resource-item--content {
       width: 70.5%;
+      display: flex;
+      flex-direction: column;
     }
+
+    .resource-item--body-wrapper {
+      height: 100%;
+      flex: 1;
+    }
+
+    .resource-item--body {
+      height: 100%;
+    }
+
 
     .resource-item--subline {
       height: 45px;
@@ -559,7 +572,7 @@ p {
     }
 
     .resource-item--footer {
-      height: 197px;
+      height: 100%;
       width: 120px;
       width: 32%;
       flex-direction: column;
@@ -567,6 +580,15 @@ p {
       align-items: center;
 
       border-left: 1px solid #d9d9d9;
+    }
+
+    .resource-item--date {
+      font-size: 14px;
+    }
+
+    .resource-item--footer-section {
+      width: 100%;
+      justify-content: center;
     }
 
     .resource-item--image-container .resource-item--image-blur {
