--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -475,8 +475,22 @@ p {
     display: block;
     color: inherit;
   }
+
   i {
     margin-right: 5px;
+  }
+}
+
+.resource-item--sdgs {
+  .sdg-goal-tag-list {
+    display: flex;
+    list-style: none;
+    margin-left: 0;
+    margin-bottom: 0;
+
+    li {
+      margin-right: 8px;
+    }
   }
 }
 
@@ -493,7 +507,8 @@ p {
 .resource-item {
   &.-wide {
     width: 100%;
-    height: 260px;
+    min-height: 260px;
+    height: auto;
     flex-direction: row;
 
     .resource-item--additional-body--card {
@@ -520,6 +535,7 @@ p {
 
     .resource-item--body {
       height: 100%;
+      max-height: none;
     }
 
 
@@ -549,7 +565,7 @@ p {
 
     .resource-item--title {
       font-size: 23px;
-      margin-bottom: 6px;
+      margin-bottom: 2px;
     }
 
     .resource-item--description {
@@ -568,7 +584,8 @@ p {
       width: 68%;
       padding-right: 20px;
       border-bottom: none;
-      padding-top: 15px;
+      padding-top: 20px;
+      padding-bottom: 15px;
     }
 
     .resource-item--footer {
@@ -589,6 +606,10 @@ p {
     .resource-item--footer-section {
       width: 100%;
       justify-content: center;
+
+      &:first-child {
+        border-bottom: 1px solid #d9d9d9;
+      }
     }
 
     .resource-item--image-container .resource-item--image-blur {
