--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -249,9 +249,9 @@ h2 {
   margin-bottom: 15px;
 }
 
-.card-section--header-title {
-  font-size: 22px;
-}
+// .card-section--header-title {
+//   font-size: 22px;
+// }
 
 .card-section--body {
   color: #67788A;
