--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -14,104 +14,31 @@
 <main>
   <%= render "header", header: @header %>
 
-  <div class="row">
-    <div class="column small-12 medium-8">
-      <%= render_custom_block 'home_page_1' %>
-    </div>
-    <div class="column column small-12 medium-4">
-      <div class="card-section">
-        <h4 class="card-section--header">
-          <i class="fas fa-bullhorn"></i>
-          Neuigkeiten
-        </h4>
-        <div class="card-section--body">
-          <%= render_custom_block 'home_page_2' %>
-        </div>
-      </div>
-
-      <div class="card-section">
-        <h4 class="card-section--header">
-          <i class="fas fa-info-circle"></i>
-          Nutzer*innen
-        </h4>
-        <div class="card-section--body">
-          <div class="system-users-list">
-            <div class="system-users-list--title">
-              <%= number_with_delimiter(User.count,  delimiter: ".") %> Nutzer*innen
-            </div>
-            <div class="system-users-list--images">
-              <% User.where.not(first_name: nil).last(5).each do |user| %>
-                <div class="system-users-list--image">
-                  <%= user&.first_name&.chars&.first&.capitalize %>
-                </div>
-              <% end %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card-section">
-        <div class="card-section--header">
-          <div class="card-section--header-icon">
-          </div>
-          <h4 class="card-section--header-title">
-            Aktivität | letzte 7 Tage
-          </h4>
-        </div>
-        <div class="card-section--body">
-          <div>
-            17 neue Benutzer*innen
-          </div>
-          <div>
-            20 neue Kommentare
-          </div>
-          <div>
-            4 neue Vorschläge
-          </div>
-          <div>
-            7 neue Diskussionen
-          </div>
-          <div class="card-section--divider"> </div>
-
-          <div>
-            Zur Übersicht aller Vorschläge
-          </div>
-          <div>
-            Zur Übersicht aller Diskussionen
-          </div>
-          <div>
-            Zur Übersicht aller Abstimmungen
-          </div>
-        </div>
-      </div>
-
-    </div>
+  <div class="d-flex u-flex-container">
+    <%= render_custom_block 'home_page_1' %>
+    <%= render 'sidebar'  %>
   </div>
 
   <% if @active_projekts.any? %>
-    <div class="row">
-      <div class="column small-centered margin-bottom">
-        <%= render Shared::Projekts::ProjektCardList::Component.new(projekts: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: true) %>
-      </div>
+    <div class="d-flex u-flex-container">
+      <%= render Shared::Projekts::ProjektCardList::Component.new(projekts: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: true) %>
+      <%= render 'sidebar'  %>
     </div>
   <% end %>
 
   <% if @cards.any? %>
-    <div class="row">
-      <div class="column small-centered margin-bottom">
-        <div class="row">
-          <div class="small-12 column">
-            <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
-          </div>
+    <div class="column small-centered margin-bottom">
+      <div class="row">
+        <div class="small-12 column">
+          <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
         </div>
       </div>
     </div>
   <% end %>
 
-
   <div class="row">
     <div class="column small-centered">
-      <%= render_custom_block 'home_page_3' %>
+      <%= render_custom_block 'home_page_2' %>
     </div>
   </div>
 
