--- a/app/assets/stylesheets/custom/projekts.scss
+++ b/app/assets/stylesheets/custom/projekts.scss
@@ -555,7 +555,7 @@ span.projekt-backlink:before {
   // flex-wrap: wrap;
   border: 1px solid #e5e6e9;
   background: #f9f9f9;
-  color: #707070;
+  // color: #707070;
   padding: 18px;
   margin-bottom: 1rem;
   justify-content: space-between;
