--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -2,7 +2,7 @@
 
 .home-page {
 
-  background-color: #F4F4F4;
+  background-color: #f4f4f4;
 
   .custom-content-block-body,
   .custom-content-block-controls {
@@ -11,6 +11,10 @@
 
   .custom-content-block-body + .custom-content-block-controls {
     margin-top: -1.5rem;
+  }
+
+  .card {
+    background-color: #f4f4f4 !important;
   }
 
   .card-homepage {
