--- a/app/views/custom/welcome/_cards.html.erb
+++ b/app/views/custom/welcome/_cards.html.erb
@@ -1,6 +1,6 @@
 <h3 class="title card-title"><%= section_title %></h3>
 
-<div class="row">
+<div class="row cards-container">
   <% cards.each do |card| %>
     <%= render "card", card: card %>
   <% end %>
