--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -249,7 +249,8 @@ body > header, .wrapper > header {
   body > .wrapper, .footer, header .top-bar {
     // margin-left: calc(40vw - 37.5rem);
     // margin-right: calc(40vw - 37.5rem);
-    max-width: 1200px;
+    // max-width: 1200px;
+    max-width: 1245px;
     margin: auto;
   }
 
@@ -257,7 +258,7 @@ body > header, .wrapper > header {
     // max-width: 1080px;
     // max-width: 1050px;
     // max-width: 1150px;
-    max-width: 1185px;
+    max-width: 1245px;
   }
 }
 
@@ -371,8 +372,9 @@ p {
 .resource-item {
   display: flex;
   flex-direction: column;
-  max-height: 480px;
-  width: 330px;
+  // max-height: 480px;
+  // width: 330px;
+  width: 300px;
   border-radius: 12px;
   background: white;
   margin-bottom: 25px;
@@ -426,8 +428,18 @@ p {
 }
 
 .resource-item--description {
-  font-size: 14px;
+  font-size: 15px;
+  margin-top: 5px;
   margin-bottom: 12px;
+}
+
+.resources-list--inner {
+  display: flex;
+  grid-gap: 15px;
+}
+
+.resource-item--tags-in-body {
+  display: none;
 }
 
 .resource-item--tags {
@@ -440,18 +452,18 @@ p {
   text-transform: uppercase;
 }
 
-.resource-item--tag::after {
+.resource-item--tag::before {
   content: '|';
   display: inline-block;
   margin-left: 7px;
   margin-right: 7px;
 }
 
-.resource-item--tag:last-child {
+.resource-item--tag:first-child {
   border-right: none;
 }
 
-.resource-item--tag:last-child::after {
+.resource-item--tag:first-child::before {
   display: none;
 }
 
@@ -463,13 +475,22 @@ p {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  padding: 0 25px;
 }
 
 .resource-item--body {
-  padding: 0 27px 25px;
+  padding: 0 25px 25px;
   border-bottom: 1px solid #d9d9d9;
   min-height: 199px;
-  max-height: 199px;
+  // max-height: 199px;
+}
+
+.resource-item--additional-body--wide {
+  display: none;
+}
+
+.resource-item--tags-in-body {
+
 }
 
 .resource-item--footer {
@@ -486,6 +507,7 @@ p {
 
 .resource-item--subline--date-range {
   display: none;
+  padding: 0 25px 25px;
 }
 
 .resource-item--footer-section {
@@ -519,14 +541,37 @@ p {
   }
 }
 
+.resource-item--sdgs-in-card {
+  padding: 12px 25px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
 .projekts-list {
-  // display: flex;
-  // justify-content: space-between;
-  // flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.projekts-list.-wide {
+  direction: column;
 }
 
 .resource-item--subline--date-range {
   display: none;
+}
+
+.resource-item--last-tag {
+  display: none;
+}
+
+.-wide {
+  .resources-list--inner {
+    flex-direction: column;
+  }
+}
+
+.resource-item--sdgs {
+
 }
 
 .resource-item {
@@ -535,16 +580,30 @@ p {
     min-height: 260px;
     height: auto;
     flex-direction: row;
-    max-width: 865px;
+    // max-width: 865px;
+    max-width: 935px;
+
+    .resource-item--sdgs-in-card {
+      display: none;
+    }
 
     .resource-item--additional-body--card {
       display: none;
     }
 
+    .resource-item--last-tag {
+      display: block;
+    }
+
+    .resource-item--tags-in-body {
+      display: flex;
+    }
+
     .resource-item--image-container {
       // width: 330px;
       // width: 29.5%;
-      width: 27%;
+      // width: 27%;
+      width: 29%;
       // width: 300px;
       // height: 100%;
       height: 273px;
@@ -553,7 +612,7 @@ p {
 
     .resource-item--content {
       // width: 70.5%;
-      width: 73%;
+      width: 71%;
       display: flex;
       flex-direction: column;
     }
