--- a/app/components/custom/shared/projekts/projekt_card_list/component.html.erb
+++ b/app/components/custom/shared/projekts/projekt_card_list/component.html.erb
@@ -1,4 +1,4 @@
-<div class="resources-list <%= class_names %>">
+<div class="u-main-column resources-list <%= class_names %>">
   <h3 class="title card-title"><%= @title %></h3>
 
   <div class="projekts-list resources-list--inner">
