--- a/app/components/custom/shared/resource_item/component.html.erb
+++ b/app/components/custom/shared/resource_item/component.html.erb
@@ -2,15 +2,15 @@
   <div class="resource-item--tags">
     <% if @tags.present? %>
       <% @tags.first(2).each do |tag| %>
-        <div class="resource-item--tag js-projekt-tag-filter-link">
-          <%= tag %>
-        </div>
+         <%= link_to(helpers.taggables_path(@resource.class.name.underscore, tag.name), class: 'resource-item--tag js-projekt-tag-filter-link') do %>
+          <%= tag.name %>
+        <% end %>
       <% end %>
 
       <% if @tags[2].present? %>
-        <div class="resource-item--tag resource-item--last-tag js-projekt-tag-filter-link">
-          <%= @tags[2] %>
-        </div>
+         <%= link_to(helpers.taggables_path(@resource.class.name.underscore, @tags[2].name), class: 'resource-item--tag resource-item--last-tag js-projekt-tag-filter-link') do %>
+          <%= @tags[2].name %>
+        <% end %>
       <% end %>
     <% end %>
   </div>
