--- a/app/components/custom/shared/resource_item/component.html.erb
+++ b/app/components/custom/shared/resource_item/component.html.erb
@@ -28,7 +28,7 @@
       <div class="resource-item--image-placeholder">
         <i class="resource-item--image-placeholder-icon fa fa-file"></i>
         <div class="resource-item--image-placeholder-text">
-          Projekt
+          <%= @resource_name %>
         </div>
       </div>
     <% end %>
