--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -500,6 +500,10 @@ p {
   justify-content: space-between;
   margin-bottom: 10px;
   padding: 0 25px;
+
+  .resource-item--head-title {
+    display: none;
+  }
 }
 
 .resource-item--body {
